--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ output:
   html_document:
     theme: cosmo
     toc: true
-    toc_depth: 2
+    toc_depth: 1
     fig_caption: true
     fig_width: 6
     fig_height: 4
@@ -24,6 +24,11 @@ output:
 ***
 
 ```{r child = "chapter3.Rmd"}
+```
+
+***
+
+```{r child = "chapter4.Rmd"}
 ```
 
 ***
