--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ output:
   html_document:
     theme: cosmo
     toc: true
-    toc_depth: 1
+    toc_depth: 2
     fig_caption: true
     fig_width: 6
     fig_height: 4
@@ -33,5 +33,9 @@ output:
 ***
 
 ```{r child = "chapter5.Rmd"}
+```
+***
+
+```{r child = "chapter6.Rmd"}
 ```
 ***
