--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -6,7 +6,55 @@ output: html_document
 ---
 # MOOC Introduction to Open Data Science 2019: Homework6
 
-### Data Preparing
-- Implement the analyses of Chapter 8 of MABS using the RATS data. (0-7 points: 0-4 points for graphs or analysis results + 0-3 points for their interpretations)
+### Tasks
 
-- Implement the analyses of Chapter 9 of MABS using the BPRS data. (0-8 points: 0-4 points for graphs or analysis results + 0-4 points for their interpretations)
+1. (0-7 points) Implement the analyses of Chapter 8 of MABS using the RATS data.
+    - (0-4 points) Graphs or analysis results
+    - (0-3 points) Interpretations
+2. (0-8 points) Implement the analyses of Chapter 9 of MABS using the BPRS (brief psychiatric rating scale) data.
+    - (0-4 points) Graphs or analysis results
+    - (0-4 points) Interpretations
+
+## Data Preparing
+
+### Dataset Introduction:
+1. RATS dataset is from a nutrition study conducted in three groups of rats (Crowder and Hand, 1990). The three groups were put on different diets, and each animal’s body weight (grams) was recorded repeatedly (approximately weekly, except in week7 when two recordings were taken) over a 9-week period. **The question of most interest is whether the growth profiles of the three groups differ**.
+
+2. BPRS (Brief Psychiatric Rating Scale) dataset is measured before treatment began (week 0) and then at weekly intervals for eight weeks. The BPRS assesses the level of 18 symptom constructs such as hostility, suspiciousness, hallucinations and grandiosity; each of these is rated from one (not present) to seven (extremely severe). **The scale is used to evaluate patients suspected of having schizophrenia**.
+
+### Load data 1: RATS dataset
+#### (0-4 points) Graphs or analysis results
+```{r}
+RATS <- read.table("https://raw.githubusercontent.com/KimmoVehkalahti/MABS/master/Examples/data/rats.txt", header = T)
+# variables' names
+names(RATS)
+# RATS dataset structure
+str(RATS)
+# RATS dataset summary
+summary(RATS)
+```
+Since the attribite of ID and Group are categorical variables, we can change the type of the dataset from integer to factor by factor() function!
+```{r}
+library(dplyr) # Access the packages dplyr and tidyr
+library(tidyr)
+RATS$ID <- factor(RATS$ID) # Factor treatment & subject
+RATS$Group <- factor(RATS$Group)
+```
+
+In order to visulaize the data, we would like to convert the original wide-form
+```{r}
+library(tidyverse)
+
+RATS_g1 <- RATS[which(RATS$Group == 1), ]
+RATS_g2 <- RATS[which(RATS$Group == 2), ]
+RATS_g3 <- RATS[which(RATS$Group == 3), ]
+ggplot(RATS) +
+    geom_line(aes(x = ID, y = WD1, color = Group))+
+    geom_line(aes(x = ID, y = WD64, color = Group))
+
+```
+
+#### (0-3 points) Interpretations
+
+
+
