--- a/chapter6.Rmd
+++ b/chapter6.Rmd
@@ -21,6 +21,8 @@ output: html_document
 2. BPRS (Brief Psychiatric Rating Scale) dataset is measured before treatment began (week 0) and then at weekly intervals for eight weeks. The BPRS assesses the level of 18 symptom constructs such as hostility, suspiciousness, hallucinations and grandiosity; each of these is rated from one (not present) to seven (extremely severe). **The scale is used to evaluate patients suspected of having schizophrenia**.
 
 ## Data Preparing: "RATS" dataset
+RATS dataset is from a nutrition study conducted in three groups of rats (Crowder and Hand, 1990). The three groups were put on different diets, and each animal’s body weight (grams) was recorded repeatedly (approximately weekly, except in week7 when two recordings were taken) over a 9-week period. **The question of most interest is whether the growth profiles of the three groups differ**.
+
 ## 1. Load dataset1
 #### (0-4 points) Graphs or analysis results
 ```{r}
@@ -37,7 +39,7 @@ Since the attribite of ID and Group are categorical variables, we can change the
 ```{r}
 library(dplyr) # Access the packages dplyr and tidyr
 library(tidyr)
-RATS$ID <- factor(RATS$ID) # Factor treatment & subject
+RATS$ID <- factor(RATS$ID) # Factor ID & Group
 RATS$Group <- factor(RATS$Group)
 ```
 
@@ -130,4 +132,67 @@ In addtion, in ANOVA analysis Normal Q-Q plot of group 2, the dots are not well 
 
 
 ## Data Preparing: "BPRS" dataset
+BPRS (Brief Psychiatric Rating Scale) dataset is measured before treatment began (week 0) and then at weekly intervals for eight weeks. The BPRS assesses the level of 18 symptom constructs such as hostility, suspiciousness, hallucinations and grandiosity; each of these is rated from one (not present) to seven (extremely severe). **The scale is used to evaluate patients suspected of having schizophrenia**.
+
 ## 1. Load dataset2
+```{r}
+BPRS <- read.table("https://raw.githubusercontent.com/KimmoVehkalahti/MABS/master/Examples/data/BPRS.txt", header = T)
+# variables' names
+names(BPRS)
+# RATS dataset structure
+str(BPRS)
+# RATS dataset summary
+summary(BPRS)
+```
+
+Since the attribite of treatment and subject are categorical variables, we can change the type of the dataset from integer to factor by factor() function!
+```{r}
+library(dplyr) # Access the packages dplyr and tidyr
+library(tidyr)
+BPRS$treatment <- factor(BPRS$treatment) # Factor treatment & subject
+BPRS$subject <- factor(BPRS$subject)
+str(BPRS)
+```
+
+In order to visulaize the data, we would like to convert the original wide-form to long-form first.
+```{r}
+BPRSL <- BPRS %>% gather(key = week, value = scale, -treatment, -subject) # Convert to long-form
+BPRSL <-  BPRSL %>% mutate(Week = as.integer(substr(week, 5, 5))) # Extract the week number, from the 5th letter to the 5 th letter
+glimpse(BPRSL)
+```
+
+Since the "Week" variable also belongs to categorical data, we can use factor() function to factorize it!
+```{r}
+BPRSL$Week <- factor(BPRSL$Week)
+glimpse(BPRSL)
+```
+
+Let's visualize the BPRSL dataset by ox chart. 
+
+## 2. Visualize dataset
+```{r}
+attach(BPRSL)
+plot(subject, scale, main="Boxplot of BPRS dataset: Scale vs. Subject", 
+   xlab="Subject ", ylab="Scale ", pch=19)
+```
+
+In the above boxplot, we can see the scale result of 8-week-treatment for each subject. We can clearly see the 1st, 19th and 20th subjects has some abnormally high scale during the observation which may suggest that the patients' condition is not quite stable, so they perhaps need further therapy or observation.
+
+```{r}
+attach(BPRSL)
+plot(treatment, scale, main="Boxplot of BPRS dataset: Scale vs. Treatment",
+   xlab="Treatment ", ylab="Scale ", pch=19)
+```
+In the above boxchart, the two treatment implemented in this observation seems has not so much differences. Both means are around but less than 40 and the treatment no.2 is a bit less than treatment no.1.
+
+```{r}
+attach(BPRSL)
+plot(Week, scale, main="Boxplot of BPRS dataset: Scale vs. Week",
+   xlab="Week ", ylab="Scale ", pch=19)
+```
+
+In the above boxchart, it is quite clear to see the patients' average scales are decreasing along the time (week).
+
+## 3. Analyze dataset
+
+According to the boxplots above, we know that the average patients' condition are getting better through the series of treatments. 
